--- a/movies-watchlist/package.json
+++ b/movies-watchlist/package.json
@@ -10,9 +10,11 @@
     "knex": "^0.95.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "sqlite3": "^5.0.2",
     "superagent": "^6.1.0",
     "web-vitals": "^1.1.1"
